     (patch #605)A
   * changed the zoom hotkeys from 'z', 'x' and 'c' to '+', '-' and '0'
   * fix the completion when controlling multiple sides (bug #8101, patch #653)
   * add a friend list in MP lobby, they will display a special icon in lobby,
     and you can be warned when they join the lobby even when not receiving
     lobby joins
   * added option to have random time of day in begin of multiplayer game
 * WML engine
   * added prerecruit event that takes place after the unit is created but
     before it is displayed.
   * added ability to define color ranges and palettes in scenario, units, and
     unit modification effects.  Added ability to add image modifications in a
     unit modification [effect] tag
   * SUF can now filter on anything that is also available throught unit
     variables, using a [wml_filter] block
   * overhaul of team coloring engine.  Now possible to apply multiple TC to an
     image.
   * added fourth color in team_rgb definitions for representative color in
     minimap
   * added a 'hide_help' key that prevents a unit type from being listed in the
     in-game help (bug #5701)
   * added an 'allow_new_game' key (default=yes) to prevent [multiplayer]
     scenarios from showing up in the multiplayer game creation interface
     (FR #6397)
   * new [set_specials] tag to allow custom specials in [effect] tags
   * new 'remove_specials' key to allow to removal of specials in [effect] tags
   * obsolete the 'set_special' key in [effect] tags
   * correct handling of UTF8 filenames under windows
   * animations can now use standard unit filters
   * animations can now use standard unit filters on the secondary unit
   * animations can now use standard unit filters on any neighbouring unit
   * fighting animations can now be filtered by swing number, damage done and
     normal attack filters (both attacker and defender)
   * made some animation parameters progressive (allows a value to be changed