@@ -47,3 +47,6 @@ Version 1.3-svn:
     * Updated translations: British English, French, German, Italian, Russian, 
       Swedish.
     * Fixed spelling mistakes in the default en_US language.
+
+  * User interface
+    * Users in the MP lobby can be marked as friends. It is possible to only be warned about friends joining
