@@ -164,7 +164,7 @@ void set_grid(bool ison)
 	}
 }
 
-void set_lobby_joins(bool ison)
+void set_lobby_joins(int ison)
 {
 	_set_lobby_joins(ison);
 }
@@ -217,7 +217,7 @@ private:
 	gui::slider music_slider_, sound_slider_, bell_slider_, scroll_slider_, gamma_slider_,
 				chat_lines_slider_, turbo_slider_, buffer_size_slider_;
 	gui::button fullscreen_button_, turbo_button_, show_ai_moves_button_, show_grid_button_,
-				lobby_minimaps_button_, show_lobby_joins_button_, sort_list_by_group_button_,
+				lobby_minimaps_button_, show_lobby_joins_button1_, show_lobby_joins_button2_, show_lobby_joins_button3_, sort_list_by_group_button_,
 				iconize_list_button_, show_floating_labels_button_, turn_dialog_button_,
 				turn_bell_button_, show_team_colours_button_, show_colour_cursors_button_,
 				show_haloing_button_, video_mode_button_, theme_button_, hotkeys_button_, gamma_button_,
@@ -254,7 +254,9 @@ preferences_dialog::preferences_dialog(display& disp, const config& game_cfg)
 	  show_ai_moves_button_(disp.video(), _("Skip AI Moves"), gui::button::TYPE_CHECK),
 	  show_grid_button_(disp.video(), _("Show Grid"), gui::button::TYPE_CHECK),
 	  lobby_minimaps_button_(disp.video(), _("Show Lobby Minimaps"), gui::button::TYPE_CHECK),
-	  show_lobby_joins_button_(disp.video(), _("Show Lobby Joins Of Friends"), gui::button::TYPE_CHECK),
+	  show_lobby_joins_button1_(disp.video(), _("Do Not Show Lobby Joins"), gui::button::TYPE_CHECK),
+	  show_lobby_joins_button2_(disp.video(), _("Show Lobby Joins Of Friends Only"), gui::button::TYPE_CHECK),
+	  show_lobby_joins_button3_(disp.video(), _("Show All Lobby Joins"), gui::button::TYPE_CHECK),
 	  sort_list_by_group_button_(disp.video(), _("Sort Lobby List"), gui::button::TYPE_CHECK),
 	  iconize_list_button_(disp.video(), _("Iconize Lobby List"), gui::button::TYPE_CHECK),
 	  show_floating_labels_button_(disp.video(), _("Show Floating Labels"), gui::button::TYPE_CHECK),
@@ -394,8 +396,12 @@ preferences_dialog::preferences_dialog(display& disp, const config& game_cfg)
 	iconize_list_button_.set_check(iconize_list());
 	iconize_list_button_.set_help_string(_("Show icons in front of the player names in the lobby."));
 
-	show_lobby_joins_button_.set_check(lobby_joins());
-	show_lobby_joins_button_.set_help_string(_("Show messages about your friends joining the multiplayer lobby"));
+	show_lobby_joins_button1_.set_check(lobby_joins() == SHOW_NON);
+	show_lobby_joins_button1_.set_help_string(_("Do not show messages about players joining the multiplayer lobby"));
+	show_lobby_joins_button2_.set_check(lobby_joins() == SHOW_FRIENDS);
+	show_lobby_joins_button2_.set_help_string(_("Show messages about your friends joining the multiplayer lobby"));
+	show_lobby_joins_button3_.set_check(lobby_joins() == SHOW_ALL);
+	show_lobby_joins_button3_.set_help_string(_("Show messages about all players joining the multiplayer lobby"));
 
 	show_floating_labels_button_.set_check(show_floating_labels());
 	show_floating_labels_button_.set_help_string(_("Show text above a unit when it is hit to display damage inflicted"));
@@ -444,7 +450,9 @@ handler_vector preferences_dialog::handler_members()
 	h.push_back(&lobby_minimaps_button_);
 	h.push_back(&sort_list_by_group_button_);
 	h.push_back(&iconize_list_button_);
-	h.push_back(&show_lobby_joins_button_);
+	h.push_back(&show_lobby_joins_button1_);
+	h.push_back(&show_lobby_joins_button2_);
+	h.push_back(&show_lobby_joins_button3_);
 	h.push_back(&show_floating_labels_button_);
 	h.push_back(&turn_dialog_button_);
 	h.push_back(&turn_bell_button_);
@@ -598,9 +606,12 @@ void preferences_dialog::update_location(SDL_Rect const &rect)
 	chat_lines_slider_.set_location(chat_lines_rect);
 	ypos += item_interline; chat_timestamp_button_.set_location(rect.x, ypos);
 	ypos += item_interline; lobby_minimaps_button_.set_location(rect.x, ypos);
-	ypos += item_interline; show_lobby_joins_button_.set_location(rect.x, ypos);
 	ypos += item_interline; sort_list_by_group_button_.set_location(rect.x, ypos);
 	ypos += item_interline; iconize_list_button_.set_location(rect.x, ypos);
+	
+	ypos += item_interline; show_lobby_joins_button1_.set_location(rect.x, ypos);
+	ypos += short_interline; show_lobby_joins_button2_.set_location(rect.x, ypos);
+	ypos += short_interline; show_lobby_joins_button3_.set_location(rect.x, ypos);
 
 	//Advanced tab
 	ypos = rect.y + top_border;
@@ -752,8 +763,25 @@ void preferences_dialog::process_event()
 	if (tab_ == MULTIPLAYER_TAB) {
 		if (lobby_minimaps_button_.pressed())
 			save_show_lobby_minimaps(lobby_minimaps_button_.checked());
-		if (show_lobby_joins_button_.pressed())
-			set_lobby_joins(show_lobby_joins_button_.checked());
+			
+		if (show_lobby_joins_button1_.pressed()) {
+			set_lobby_joins(SHOW_NON);
+			show_lobby_joins_button1_.set_check(true);
+			show_lobby_joins_button2_.set_check(false);
+			show_lobby_joins_button3_.set_check(false);
+        }
+		if (show_lobby_joins_button2_.pressed()) {
+			set_lobby_joins(SHOW_FRIENDS);
+			show_lobby_joins_button1_.set_check(false);
+			show_lobby_joins_button2_.set_check(true);
+			show_lobby_joins_button3_.set_check(false);
+        }
+		if (show_lobby_joins_button3_.pressed()) {
+			set_lobby_joins(SHOW_ALL);
+			show_lobby_joins_button1_.set_check(false);
+			show_lobby_joins_button2_.set_check(false);
+			show_lobby_joins_button3_.set_check(true);
+        }
 		if (sort_list_by_group_button_.pressed())
 			set_sort_list(sort_list_by_group_button_.checked());
 		if (iconize_list_button_.pressed())
@@ -898,7 +926,9 @@ void preferences_dialog::set_selection(int index)
 	lobby_minimaps_button_.hide(hide_multiplayer);
 	sort_list_by_group_button_.hide(hide_multiplayer);
 	iconize_list_button_.hide(hide_multiplayer);
-	show_lobby_joins_button_.hide(hide_multiplayer);
+	show_lobby_joins_button1_.hide(hide_multiplayer);
+	show_lobby_joins_button2_.hide(hide_multiplayer);
+	show_lobby_joins_button3_.hide(hide_multiplayer);
 
 	const bool hide_advanced = tab_ != ADVANCED_TAB;
 	advanced_.hide(hide_advanced);
