@@ -94,6 +94,8 @@ Version 1.3-svn:
    * add a friend list in MP lobby, they will display a special icon in lobby,
      and you can be warned when they join the lobby even when not receiving
      lobby joins
+   * add an option to specify what you want to see as joins: all, friends,
+   none
    * added option to have random time of day in begin of multiplayer game
  * WML engine
    * added prerecruit event that takes place after the unit is created but
